# Climact

./: .gitignore  JSON-IO-Test-01.json  JSON-template.json  README.md  Steel-V26.json  Untitled_1.json  Untitled_2.json  check25-delta.json  config.py  dump.json  example.json  fileio-test.json  generator-test.json  json-test-v2.json  json-test.json  line-count  main.py  pyproject.toml  steel-v25.json  steel-v27.json  temporary.json  util.py
.github/workflows/: qodana_code_quality.yml
actions/: __init__.py  _actions_backup.py  actions.py  manager.py
core/: category.py  core_gui.py  core_qss.py  dialog.py  label.py  resource.py  separator.py  stack.py  stream.py  util.py
custom/: __init__.py  button.py  config.py  configure.py  dialog.py  entity.py  evolution.py  getter.py  input.py  label.py  message.py  profile.py  radiogroup.py  separator.py  stream.py  string.py  toolbar.py
gui/: __init__.py  navbar.py  splash.py  tabber.py  window.py
rss/: climact.qrc
rss/icons/: PrimeFlix.html  macos.qss
rss/style/: macos.qss
tabs/: __init__.py
tabs/database/: eqnlist.py  eqnview.py  manager.py  selector.py  table.py  tree.py
tabs/gemini/: JSON-instructions.txt  __init__.py  agent.py  gemini.py  thread.py  widget.py
tabs/maps/: maps.html  maps.py
tabs/optima/: ampl.py  casadi.py  objective.py  optimizer.py  settings.py
tabs/schema/: __init__.py  action.py  canvas.py  fileio.py  jsonio.py  jsonlib.py  viewer.py
tabs/sheets/: database.py  eqnview.py  manager.py  table.py  tree.py
widgets/: __init__.py
widgets/config/: __init__.py  config.py  editor.py  (+3 more)
(+27 files in other folders)
