[project]
name = "climact-ai"
version = "0.1.0"
description = "An AI-assisted simulation and analysis platform for process-modeling"
authors = [
    {name = "sudharshan-saranathan",email = "sudharshan.saranathan@outlook.in"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6 (>=6.9.0,<7.0.0)",
    "amplpy (>=0.14.0,<0.15.0)",
    "google-genai (>=1.15.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "climact"}]

[tool.poetry.group.dev.dependencies]
pyqt6 = "^6.9.0"
amplpy = "^0.14.0"
google-genai = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
