[project]
name = "-climact-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "sudharshan-saranathan",email = "sudharshan.saranathan@outlook.in"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "_climact"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
